--- a/src/sentry/static/sentry/less/components/button.less
+++ b/src/sentry/static/sentry/less/components/button.less
@@ -99,6 +99,18 @@
   }
 }
 
+.button-success {
+  color: #fff;
+  background: @green-dark;
+  border: 1px solid @green-light;
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+    background: @green;
+  }
+}
+
 .button-busy {
   opacity: 0.65;
 }
